feat: add routes for fetch options base on the id for slug or
